iho update she squashed pic

--- a/_ishalvingover/25-08-24-1.md
+++ b/_ishalvingover/25-08-24-1.md
@@ -86,7 +86,7 @@ The fox siblings, with their arms stretched, drew a circle on the air; from this
 - <span class="iho-name-span">Bad echo. </span> *I like paths with no lights. But...*
 - <span class="iho-name-span">The fox girl. </span> It is expected...
 
-> ...
+![/imgs_ishalvingover/250908_iho_she_squahed.png](/imgs_ishalvingover/250908_iho_she_squahed.png)
 
 She squashed the bad echos round with her paws, wrapping it with an obscuring firmament; then it was placed on the center of the sphere. 
 
