250910 iho somepaw pic

--- a/_ishalvingover/25-08-24-1.md
+++ b/_ishalvingover/25-08-24-1.md
@@ -90,7 +90,8 @@ The fox siblings, with their arms stretched, drew a circle on the air; from this
 
 She squashed the bad echos round with her paws, wrapping it with an obscuring firmament; then it was placed on the center of the sphere. 
 
-> ...
+250910_iho_then_somepaw
+![/imgs_ishalvingover/250910_iho_then_somepaw.png](/imgs_ishalvingover/250910_iho_then_somepaw.png)
 
 Detached and thinking alone -- but then somepaw pressed the outer firmament. It was rather a refreshing stimulus; I hated this obscured morsel taking my attention. A cat -- a kid was it. He rolled it like a ball, taking us into his place.
 
