--- a/_ishalvingover/25-08-24-1.md
+++ b/_ishalvingover/25-08-24-1.md
@@ -1,7 +1,7 @@
 ---
 title: Ishalvingover -1-
 
-firstverse: "DRAFT; WIP"
+firstverse: "In that foreign place,"
 ---
 
 ![/imgs_ishalvingover/250824_iho_the_object_of_interest.png](/imgs_ishalvingover/250824_iho_the_object_of_interest.png)
@@ -12,11 +12,11 @@ The "object of interest" appears to be a condensed particle. It's traveling arou
 
 A machine is installed in front of the container -- Likely to control the "parameters" that the paper mentions.
 
-![/imgs_ishalvingover/250826_iho_the_phone_rings.png](/imgs_ishalvingover/250826_iho_the_phone_rings.png)
+![/imgs_ishalvingover/250911_iho_the_phone_rings.png](/imgs_ishalvingover/250911_iho_the_phone_rings.png)
 
 I don't know what these are. I am only here because I could not refuse the request -- which may have been given to me due to it being a trivial task. I'd rather want to *pay* them so that they get another person to do this job, other than me... At least I can do my work while handling this chore. The phone rings...
 
-![/imgs_ishalvingover/250826_iho_hello_mm_when.png](/imgs_ishalvingover/250826_iho_hello_mm_when.png)
+![/imgs_ishalvingover/250911_iho_hello_mm_when.png](/imgs_ishalvingover/250911_iho_hello_mm_when.png)
 
 - Hello?
 - Mm. When?
@@ -25,11 +25,11 @@ I don't know what these are. I am only here because I could not refuse the reque
 
 For other people it could be worse. That thought made me not better but not worse either. The machine...
 
-![/imgs_ishalvingover/250826_iho_the_split.png](/imgs_ishalvingover/250826_iho_the_split.png)
+![/imgs_ishalvingover/250911_iho_the_split.png](/imgs_ishalvingover/250911_iho_the_split.png)
 
 ...
 
-![/imgs_ishalvingover/250826_iho_blame_for_the_accident.png](/imgs_ishalvingover/250826_iho_blame_for_the_accident.png)
+![/imgs_ishalvingover/250911_iho_blame_for_the_accident.png](/imgs_ishalvingover/250911_iho_blame_for_the_accident.png)
 
 The blame for the accident fell not unto me, for I was not paid and thus held no responsibility. But the incident on my side, that is the particle having been traveling through my head, was not considered either. They talked over the consequence toward the world from this accident, which did not interest me.
 
@@ -69,7 +69,7 @@ Well lit too. Met a pink bunny girl. On the table was a chess board, on which a 
 
 But then a cyanoid fox boy hit the table, shaking our attentions.
 
-![/imgs_ishalvingover/250904_iho_the_cats_are_coming.png](/imgs_ishalvingover/250904_iho_the_cats_are_coming.png)
+![/imgs_ishalvingover/250911_iho_the_cats_are_coming.png](/imgs_ishalvingover/250911_iho_the_cats_are_coming.png)
 
 "The cats", said he, "are coming." We followed him.
 
@@ -90,13 +90,13 @@ The fox siblings, with their arms stretched, drew a circle on the air; from this
 
 She squashed the bad echos round with her paws, wrapping it with an obscuring firmament; then it was placed on the center of the sphere. 
 
-250910_iho_then_somepaw
 ![/imgs_ishalvingover/250910_iho_then_somepaw.png](/imgs_ishalvingover/250910_iho_then_somepaw.png)
 
 Detached and thinking alone -- but then somepaw pressed the outer firmament. It was rather a refreshing stimulus; I hated this obscured morsel taking my attention. A cat -- a kid was it. He rolled it like a ball, taking us into his place.
 
-> ...
+<p class="text-align-center asterism">⁂</p>
 
+<p class="text-align-center">
 In that foreign place,<br>
 stood alone the sphere,<br>
 in which four creatures<br>
@@ -108,10 +108,11 @@ till the new cells construct<br>
 the original macro-sphere.<br>
 <br>
 So begotten is a bastard world.<br>
+</p>
 
-- <span class="iho-name-span">The pink bunny.</span> Such organization can only form in a closed world; consider: *the ever-degenerating spiral, the standardization of sub-standards and the sub-standardization of sub-standards...*
+- <span class="iho-name-span">The pink bunny.</span> Such organization can only form in a closed world; consider: *the ever-degenerating spiral, the \*ization of sub-\*s and the sub-\*ization of \*s...*
 
-<p class="text-align-center">⁂</p>
+<p class="text-align-center">* * *<br><i>25.09.11</i></p>
 
 <style>
 	.iho-name-span {
@@ -122,5 +123,9 @@ So begotten is a bastard world.<br>
 
 	.text-align-center {
 		text-align: center;
+	}
+
+	.asterism {
+		padding-top: 20%;
 	}
 </style>
