iho2 update she played her violin

--- a/_ishalvingover/25-09-14-2.md
+++ b/_ishalvingover/25-09-14-2.md
@@ -8,10 +8,8 @@ firstverse: "DRAFT; WIP"
 
 *A schema, of custom, regarding the degrade-automata. These automata march on the shallow lattice, on which they leave viscous yet ephemeral liquid, which also fuels their march by natural design. Some clusters show malfunctioning behaviours, which is expected: they break down and fill their contol sections with the fluids, rotting asymptotically, which inflicts neighbors in the radius. While this phenomenon is insignificant to the function of the automata, it displeases the observer.*
 
-> ...
-
 said the cat-boy, and he wanted to hunt these typical nuisances. Acknowledging that he hasn't the intention to hurt us -- and kill the fox siblings, we deactivated the sphere.
 
-> ...
+![/imgs_ishalvingover/250918_iho_she_played_her_violin.png](/imgs_ishalvingover/250918_iho_she_played_her_violin.png)
 
 Then she played her violin. Music that only we know... And she smiled. Felt like an illusion. Who was she? I *remember* her: doubtful is that she is here. She is, *without her form yet*. Not here...
