iho2 update shewithamask

--- a/_ishalvingover/25-09-14-2.md
+++ b/_ishalvingover/25-09-14-2.md
@@ -1,5 +1,5 @@
 ---
-title: Ishalvingover -1-
+title: Ishalvingover -2-
 
 firstverse: "DRAFT; WIP"
 ---
@@ -13,3 +13,15 @@ said the cat-boy, and he wanted to hunt these typical nuisances. Acknowledging t
 ![/imgs_ishalvingover/250918_iho_she_played_her_violin.png](/imgs_ishalvingover/250918_iho_she_played_her_violin.png)
 
 Then she played her violin. Music that only we know... And she smiled. Felt like an illusion. Who was she? I *remember* her: doubtful is that she is here. She is, *without her form yet*. Not here...
+
+> ...
+
+She, with a mask.
+
+We held our hands and walked to her star. In her pastel room were her drawings on the walls. And the doors were locked. At that moment I wanted to see stars above. "Here, this window..." said she. With the window frames it looked like an art piece, with indeterminable depths. The warm lights of the room were displaying the star-window's place... Here I could imaginate behind her mask beyond memories.
+
+Morning. After having a breakfast, she unlocked the door and let me leave, but with a restraint: the collar on my neck that will stay until I find the way to set her free from her *house*.
+
+---
+
+<p class="text-align-center"><i>TBC</i></p>
