iho2 update shewithamask pic

--- a/_ishalvingover/25-09-14-2.md
+++ b/_ishalvingover/25-09-14-2.md
@@ -14,7 +14,7 @@ said the cat-boy, and he wanted to hunt these typical nuisances. Acknowledging t
 
 Then she played her violin. Music that only we know... And she smiled. Felt like an illusion. Who was she? I *remember* her: doubtful is that she is here. She is, *without her form yet*. Not here...
 
-> ...
+![/imgs_ishalvingover/250922_iho_she_with_a_mask.png](/imgs_ishalvingover/250922_iho_she_with_a_mask.png)
 
 She, with a mask.
 
