iho2 update outside

--- a/_ishalvingover/25-09-14-2.md
+++ b/_ishalvingover/25-09-14-2.md
@@ -22,6 +22,12 @@ We held our hands and walked to her star. In her pastel room were her drawings o
 
 Morning. After having a breakfast, she unlocked the door and let me leave, but with a restraint: the collar on my neck that will stay until I find the way to set her free from her *house*.
 
+> ...
+
+Outside were south European structures surrounding the streets -- yet the fog took their colors. The road lead me to a gray house. Inside, I felt more lost. A gray cat had me seen in front of a desk. "Why," said he, "are you not sleeping?" to which "I love her, and I believe in Love..." said I. Rather a bliss, that we know not much each other, for it moves, and...
+
+Then the cat showed me a video of of two men talking, which did not take much of my attention.
+
 ---
 
 <p class="text-align-center"><i>TBC</i></p>
