--- a/_ishalvingover/25-09-14-2.md
+++ b/_ishalvingover/25-09-14-2.md
@@ -24,9 +24,15 @@ Morning. After having a breakfast, she unlocked the door and let me leave, but w
 
 > ...
 
-Outside were south European structures surrounding the streets -- yet the fog took their colors. The road lead me to a gray house. Inside, I felt more lost. A gray cat had me seen in front of a desk. "Why," said he, "are you not sleeping?" to which "I love her, and I believe in Love..." said I. Rather a bliss, that we know not much each other, for it moves, and...
+Outside were south European structures surrounding the streets -- yet the fog took their colors. The road lead me to a gray house. Inside, I felt more lost. A gray cat had me seen* in front of a desk. "Why," said he, "are you not sleeping?" to which "I love her, and I believe in Love..." said I. Rather a bliss, that we know not much each other, for it moves, and...
 
-Then the cat showed me a video of of two men talking, which did not take much of my attention.
+Then the cat showed me a video of two men talking, which did not take much of my attention.
+
+The illusions, the enclosed, and...
+
+All floats and goes, yet she remains, and...
+
+Hand-countable actors: I have to be one, and...
 
 ---
 
