--- a/_ishalvingover/25-09-14-2.md
+++ b/_ishalvingover/25-09-14-2.md
@@ -34,6 +34,10 @@ All floats and goes, yet she remains, and...
 
 Hand-countable actors: I have to be one, and...
 
+> ...
+
+"I'm weary." were the last words uttered before the groundsteppers awoke me. Yet it did not bother me, for I knew that reaching above again would arrive soon. *"Death to leaky automata,"* the hunter exclaimed -- seen was a unit of automaton nearing us, barbaring detastable murmurs. It circled us around multiple times, leaving its repugnant trails, gradully breaking self down till it was dead. I was rather intrigued on why it showed such behaviour, and wanted to dissect it to examine inside. But "microcosms are often disappointing," said he; so I instead thought of her.
+
 ---
 
 <p class="text-align-center"><i>TBC</i></p>
