--- a/_ishalvingover/25-09-14-2.md
+++ b/_ishalvingover/25-09-14-2.md
@@ -22,7 +22,8 @@ We held our hands and walked to her star. In her pastel room were her drawings o
 
 Morning. After having a breakfast, she unlocked the door and let me leave, but with a restraint: the collar on my neck that will stay until I find the way to set her free from her *house*.
 
-> ...
+![/imgs_ishalvingover/250929_iho_outside_were_structures.png](/imgs_ishalvingover/250929_iho_outside_were_structures.png)
+<p class="text-align-center"><i>[image to be replaced]</i></p>
 
 Outside were south European structures surrounding the streets -- yet the fog took their colors. The road lead me to a gray house. Inside, I felt more lost. A gray cat had me seen* in front of a desk. "Why," said he, "are you not sleeping?" to which "I love her, and I believe in Love..." said I. Rather a bliss, that we know not much each other, for it moves, and...
 
@@ -36,7 +37,7 @@ Hand-countable actors: I have to be one, and...
 
 > ...
 
-"I'm weary." were the last words uttered before the groundsteppers awoke me. Yet it did not bother me, for I knew that reaching above again would arrive soon. *"Death to leaky automata,"* the hunter exclaimed -- seen was a unit of automaton nearing us, barbaring detastable murmurs. It circled us around multiple times, leaving its repugnant trails, gradully breaking self down till it was dead. I was rather intrigued on why it showed such behaviour, and wanted to dissect it to examine inside. But "microcosms are often disappointing," said he; so I instead thought of her.
+"I'm weary." were the last words uttered before the groundsteppers awoke me. Yet it did not bother me, for I knew that reaching above again would arrive soon. *"Death to leaky automata,"* the hunter exclaimed -- seen was a unit of automaton nearing us, barbaring detastable murmurs. It circled us around multiple times, leaving its repugnant trails, gradully breaking self down till it was dead. I was rather intrigued on why it showed such behaviour, and wanted to dissect it to examine inside. But "microcosms are often disappointing," said he; so I instead thought of her. It was sweet and sweeter. 
 
 ---
 
