iho2 update stairs

--- a/_ishalvingover/25-09-14-2.md
+++ b/_ishalvingover/25-09-14-2.md
@@ -39,6 +39,10 @@ Hand-countable actors: I have to be one, and...
 
 "I'm weary." were the last words uttered before the groundsteppers awoke me. Yet it did not bother me, for I knew that reaching above again would arrive soon. *"Death to leaky automata,"* the hunter exclaimed -- seen was a unit of automaton nearing us, barbaring detastable murmurs. It circled us around multiple times, leaving its repugnant trails, gradully breaking self down till it was dead. I was rather intrigued on why it showed such behaviour, and wanted to dissect it to examine inside. But "microcosms are often disappointing," said he; so I instead thought of her. It was sweet and sweeter. 
 
+> ...
+
+Climbed the gray stairs -- on each floor had a metal door that did not open. One of the paths was open, which lead us to a vast room whose walls were decorated to immitate outside. That room had a building-like structures, each of which held their own rooms -- and -- The girl! I had to be everyone... and everything everywhere. So I asked a guy next to the round-fence. He smiled gently,
+
 ---
 
 <p class="text-align-center"><i>TBC</i></p>
