iho2 update and ss update

--- a/_ishalvingover/25-09-14-2.md
+++ b/_ishalvingover/25-09-14-2.md
@@ -41,7 +41,7 @@ Hand-countable actors: I have to be one, and...
 
 > ...
 
-Climbed the gray stairs -- on each floor had a metal door that did not open. One of the paths was open, which lead us to a vast room whose walls were decorated to immitate outside. That room had a building-like structures, each of which held their own rooms -- and -- The girl! I had to be everyone... and everything everywhere. So I asked a guy next to the round-fence. He smiled gently,
+Gray stairs and metal doors. One opened. A vast room imitating a street. In which building-like structures -- The girl! I had to be everyone everywhere -- above. So the guy around the round-fence. He smiled gently, and pulled my collar. By warmth he knew why I was here.
 
 ---
 
