--- a/_ishalvingover/25-09-14-2.md
+++ b/_ishalvingover/25-09-14-2.md
@@ -43,7 +43,9 @@ Hand-countable actors: I have to be one, and...
 
 Gray stairs and metal doors. One opened. A vast room imitating a street. In which building-like structures -- The girl! I had to be everyone everywhere -- above. So the guy around the round-fence. He smiled gently, and pulled my collar. By warmth he knew why I was here.
 
-But I am a wolf untamable!
+But I am a wolf untamable! 
+
+A NOBLE SNAKE CRAWLS OVER THE FRAGMENTARY CUBES. HE THEN RISES UPWARD; NEARING IS THE LIGHT.
 
 ---
 
