iho2 update also ss update

--- a/_ishalvingover/25-09-14-2.md
+++ b/_ishalvingover/25-09-14-2.md
@@ -45,7 +45,7 @@ Gray stairs and metal doors. One opened. A vast room imitating a street. In whic
 
 But I am a wolf untamable! 
 
-A NOBLE SNAKE CRAWLS OVER THE FRAGMENTARY CUBES. HE THEN RISES UPWARD; NEARING IS THE LIGHT.
+THE NOBLE SNAKE CRAWLS OVER FRAGMENTARY CUBES. HE THEN RISES UPWARD; NEARING IS THE LIGHT.
 
 ---
 
