iho2 update noble snake pic

--- a/_ishalvingover/25-09-14-2.md
+++ b/_ishalvingover/25-09-14-2.md
@@ -45,6 +45,10 @@ Gray stairs and metal doors. One opened. A vast room imitating a street. In whic
 
 But I am a wolf untamable! 
 
+<p class="text-align-center asterism">⁂</p>
+
+![/imgs_ishalvingover/251015_the_noble_snake_crawls.png](/imgs_ishalvingover/251015_the_noble_snake_crawls.png)
+
 THE NOBLE SNAKE CRAWLS OVER FRAGMENTARY CUBES. HE THEN RISES UPWARD; NEARING IS THE LIGHT.
 
 ---
