--- a/_ishalvingover/25-09-14-2.md
+++ b/_ishalvingover/25-09-14-2.md
@@ -1,7 +1,7 @@
 ---
 title: Ishalvingover -2-
 
-firstverse: "DRAFT; WIP"
+firstverse: "The noble snake crawls over fragmentary cubes."
 ---
 
 ![/imgs_ishalvingover/250914_iho_schema_degrade_automata.png](/imgs_ishalvingover/250914_iho_schema_degrade_automata.png)
@@ -39,7 +39,7 @@ Hand-countable actors: I have to be one, and...
 
 "I'm weary." were the last words uttered before the groundsteppers awoke me. Yet it did not bother me, for I knew that reaching above again would arrive soon. *"Death to leaky automata,"* the hunter exclaimed -- seen was a unit of automaton nearing us, barbaring detastable murmurs. It circled us around multiple times, leaving its repugnant trails, gradully breaking self down till it was dead. I was rather intrigued on why it showed such behaviour, and wanted to dissect it to examine inside. But "microcosms are often disappointing," said he; so I instead thought of her. It was sweet and sweeter. 
 
-> ...
+![/imgs_ishalvingover/251016_iho_gray_stairs_and_metal_doors.png](/imgs_ishalvingover/251016_iho_gray_stairs_and_metal_doors.png)
 
 Gray stairs and metal doors. One opened. A vast room imitating a street. In which building-like structures -- The girl! I had to be everyone everywhere -- above. So the guy around the round-fence. He smiled gently, and pulled my collar. By warmth he knew why I was here.
 
@@ -51,6 +51,4 @@ But I am a wolf untamable!
 
 THE NOBLE SNAKE CRAWLS OVER FRAGMENTARY CUBES. HE THEN RISES UPWARD; NEARING IS THE LIGHT.
 
----
-
-<p class="text-align-center"><i>TBC</i></p>
+<p class="text-align-center">* * *<br><i>25.10.16</i></p>
