--- a/_ishalvingover/25-09-14-2.md
+++ b/_ishalvingover/25-09-14-2.md
@@ -49,6 +49,6 @@ But I am a wolf untamable!
 
 ![/imgs_ishalvingover/251015_the_noble_snake_crawls.png](/imgs_ishalvingover/251015_the_noble_snake_crawls.png)
 
-THE NOBLE SNAKE CRAWLS OVER FRAGMENTARY CUBES. HE THEN RISES UPWARD; NEARING IS THE LIGHT.
+<p class="text-align-center">THE NOBLE SNAKE CRAWLS OVER FRAGMENTARY CUBES. HE THEN RISES UPWARD; NEARING IS THE LIGHT.</p>
 
 <p class="text-align-center">* * *<br><i>25.10.16</i></p>
