iho3 update sigma0 another pair

--- a/_ishalvingover/25-10-18-3.md
+++ b/_ishalvingover/25-10-18-3.md
@@ -5,3 +5,21 @@ firstverse: "DRAFT; WIP"
 ---
 
 1. I am of the noble blood.
+
+2. I am above the world.
+
+3. My regard penetrates realms.
+
+4. I'm still rising.
+
+5. It first encounters the world petty.
+
+6. Such world is only complex when seen from its cell.
+
+7. Behind this cluster are σ
+
+<h3 class="text-align-center">σ0</h3>
+
+![/imgs_ishalvingover/251023_iho_sigma0.png](/imgs_ishalvingover/251023_iho_sigma0.png)
+
+- Another pair, in their refuge.
