iho3 update core

--- a/_ishalvingover/25-10-18-3.md
+++ b/_ishalvingover/25-10-18-3.md
@@ -23,3 +23,15 @@ firstverse: "DRAFT; WIP"
 ![/imgs_ishalvingover/251023_iho_sigma0.png](/imgs_ishalvingover/251023_iho_sigma0.png)
 
 - Another pair, in their refuge.
+
+One day they departed from their shelter and visited an alien planet. It wasn't their designated task, for they were bound to a certain contract -- They had come only as visitors. There they saw ...
+
+> ...
+
+Glowing lights over the mounts. Are they rising or falling? Ants rotating the mountain tops...
+
+> ...
+
+They descended through the ground, holding a parcel, and encountered a wrecked gate. Inside was a <br>
+light white, comparable to none...<br>
+Must the C o r e be.
