iho3 update crawls

--- a/_ishalvingover/25-10-18-3.md
+++ b/_ishalvingover/25-10-18-3.md
@@ -34,4 +34,16 @@ Glowing lights over the mounts. Are they rising or falling? Ants rotating the mo
 
 They descended through the ground, holding a parcel, and encountered a wrecked gate. Inside was a <br>
 light white, comparable to none...<br>
-Must the C o r e be.
+Must the C o r e be.<br>
+
+Crawls.<br>
+The movables squeak.<br>
+Yet scream not I -- here.<br>
+Ah! it returns.<br>
+I love it.<br>
+"Because it makes me think of you more"<br>
+
+So I held the crystal and climbed out.<br>
+
+Good mounts! block the electric lights -- φαινετω<br>
+And you will reclaim the earth..!<br>
