--- a/_ishalvingover/25-10-18-3.md
+++ b/_ishalvingover/25-10-18-3.md
@@ -26,11 +26,11 @@ firstverse: "DRAFT; WIP"
 
 One day they departed from their shelter and visited an alien planet. It wasn't their designated task, for they were bound to a certain contract -- They had come only as visitors. There they saw ...
 
-> ...
+![/imgs_ishalvingover/251101_iho_antsrotating.png](/imgs_ishalvingover/251101_iho_antsrotating.png)
 
 Glowing lights over the mounts. Are they rising or falling? Ants rotating the mountain tops...
 
-> ...
+![/imgs_ishalvingover/251105_iho_descended_through_the_ground.png](/imgs_ishalvingover/251105_iho_descended_through_the_ground.png)
 
 They descended through the ground, holding a parcel, and encountered a wrecked gate. Inside was a <br>
 light white, comparable to none...<br>
@@ -47,3 +47,6 @@ So I held the crystal and climbed out.<br>
 
 Good mounts! block the electric lights -- φαινετω<br>
 And you will reclaim the earth..!<br>
+
+- Encounter: lacks.
+
