--- a/_ishalvingover/25-10-18-3.md
+++ b/_ishalvingover/25-10-18-3.md
@@ -50,3 +50,22 @@ And you will reclaim the earth..!<br>
 
 - Encounter: lacks.
 
+- M: Blue air.
+
+- I struggled round. I *realized*: futile is to believe *people-as-mass*.
+
+1. Ignore all literature that cites Wittgenstein.
+
+I beheld the earth, and lo: behind the mounts that enclose this city<br>
+parallels arose; and in which the visible spectra danced.<br>
+
+I hold this a book - two sections, nearly consequent. By these continential letters I found two girls -- about to be forgotten, so half-awake and half-asleep given a breath.<br>
+Yet they are marginal.<br>
+
+- A room, blue walls.
+
+- Outisde the room, I was looking at drawings outside. Then a man of a short posture apporached and rambled about those who manage the artpieces to be displayed, and asked whether I know the "typical selection process": I did not want to -- why care, and why expect me to care? you justifier and rationalizer: detestable humours, these-and-those without heart... So I walked off.
+
+> ...
+
+The room... In which, a couple. [draw]
