iho3 udpate the room in which a couple

--- a/_ishalvingover/25-10-18-3.md
+++ b/_ishalvingover/25-10-18-3.md
@@ -66,6 +66,6 @@ Yet they are marginal.<br>
 
 - Outisde the room, I was looking at drawings outside. Then a man of a short posture apporached and rambled about those who manage the artpieces to be displayed, and asked whether I know the "typical selection process": I did not want to -- why care, and why expect me to care? you justifier and rationalizer: detestable humours, these-and-those without heart... So I walked off.
 
-> ...
+![/imgs_ishalvingover/251117_iho3_theroominwhichacouple.png](/imgs_ishalvingover/251117_iho3_theroominwhichacouple.png)
 
-The room... In which, a couple. [draw]
+The room... In which, a couple.
