251123 the subway incident

--- a/_ishalvingover/25-10-18-3.md
+++ b/_ishalvingover/25-10-18-3.md
@@ -69,3 +69,9 @@ Yet they are marginal.<br>
 ![/imgs_ishalvingover/251117_iho3_theroominwhichacouple.png](/imgs_ishalvingover/251117_iho3_theroominwhichacouple.png)
 
 The room... In which, a couple.
+Satisfied with their moment, for they could embrace each other.
+The former baron and baroness of their domain, enclosed content were.
+Their reign started from the White Stone, and ended with the pursuers.
+
+He saw over the dome of his land...
+And went down the castle, to see the cat girl of the town.
