--- a/_ishalvingover/25-10-18-3.md
+++ b/_ishalvingover/25-10-18-3.md
@@ -68,10 +68,14 @@ Yet they are marginal.<br>
 
 ![/imgs_ishalvingover/251117_iho3_theroominwhichacouple.png](/imgs_ishalvingover/251117_iho3_theroominwhichacouple.png)
 
-The room... In which, a couple.
-Satisfied with their moment, for they could embrace each other.
-The former baron and baroness of their domain, enclosed content were.
-Their reign started from the White Stone, and ended with the pursuers.
+The room... In which, a couple.<br>
+Satisfied with their moment, for they could embrace each other.<br>
+The former baron and baroness of their domain, enclosed content were.<br>
+Their reign started from the White Stone, and ended with the pursuers.<br>
+<br>
+He saw over the dome of his land...<br>
+And went down the castle, to see the cat girl of the town.<br>
+<br>
+Out of the sunshone streets entered he into her room,<br>
+and embraced her. "Rarely wish I the time to be over..."<br>
 
-He saw over the dome of his land...
-And went down the castle, to see the cat girl of the town.
