--- a/_ishalvingover/25-10-18-3.md
+++ b/_ishalvingover/25-10-18-3.md
@@ -28,7 +28,7 @@ One day they departed from their shelter and visited an alien planet. It wasn't 
 
 ![/imgs_ishalvingover/251101_iho_antsrotating.png](/imgs_ishalvingover/251101_iho_antsrotating.png)
 
-Glowing lights over the mounts. Are they rising or falling? Ants rotating the mountain tops...
+Glowing lights over the mounts. Are they rising or falling? Ants rotating around the mountain tops...
 
 ![/imgs_ishalvingover/251105_iho_descended_through_the_ground.png](/imgs_ishalvingover/251105_iho_descended_through_the_ground.png)
 
@@ -78,4 +78,12 @@ And went down the castle, to see the cat girl of the town.<br>
 <br>
 Out of the sunshone streets entered he into her room,<br>
 and embraced her. "Rarely wish I the time to be over..."<br>
+<br>
+Having warmth of her from the neck, "We are forever<br>
+here and now," said she.<br>
 
+<p class="text-align-center asterism">⁂</p>
+
+"Forever here and now...?"
+
+The sunlight through the window warmed the orange air of the room, and he saw her smile.
