--- a/_ishalvingover/25-10-18-3.md
+++ b/_ishalvingover/25-10-18-3.md
@@ -1,7 +1,8 @@
 ---
 title: Ishalvingover -3-
 
-firstverse: "DRAFT; WIP"
+firstverse: Forever here and now...?
+
 ---
 
 1. I am of the noble blood.
@@ -87,3 +88,5 @@ here and now," said she.<br>
 "Forever here and now...?"
 
 The sunlight through the window warmed the orange air of the room, and he saw her smile.
+
+<p class="text-align-center">* * *<br><i>25.11.26</i></p>
