--- a/_ishalvingover/25-11-29-4.md
+++ b/_ishalvingover/25-11-29-4.md
@@ -10,3 +10,12 @@ firstverse: "DRAFT; WIP"
 Instead of such grim stories, he wanted to think something else, to purify his mind. The girl of the town. That orange scene collaped into a set of horizontal lines, then again to points, then to one point -- then he heard her replying to what he said lying on his bed. "Yeah, yeah;" he needed more sleep.
 
 It was the wide concrete platz surrounded by living blocks, where he reaches sometimes sleeping. Only recent was the moment where he realized that that place may not be real. Along with that wooden path of the moutains, and... 
+
+Was enough; he opened his eyes and embraced his wife. While hugging each other they beheld the sky. Rather fuzzy... he closed the curtains.
+
+Then it was breached. Their rituals... For the sibling's inhaerent nature, that was... The same with he got in the cave!
+
+He reached the house of his, and made sure that the crystal was still there -- next to his sister's bed. It can't continue to be here... So we needed a vessel -- an innocent creature's head, with a cavity precise...
+
+I didn't mind.
+
