--- a/_ishalvingover/25-11-29-4.md
+++ b/_ishalvingover/25-11-29-4.md
@@ -19,3 +19,35 @@ He reached the house of his, and made sure that the crystal was still there -- n
 
 I didn't mind.
 
+And that explains.
+
+- So the particle, what was it?
+- Better question would be 'where did it head?' -- while we never know it...
+- What do they see? What do they feel,<br> 
+traversing the artificial space<br>
+filled with cold masses stuck<br>
+only following the light spread?<br>
+
+For they surely hold their past<br>
+own...<br>
+
+All this fuzziness came from the realization.<br>
+The lines collapsing, ...<br>
+Yet again it spreads again.<br>
+
+What saw we on that cave:<br>
+Flesh clean. Rather pleasant.<br>
+They likely left it as is.<br>
+
+Ah, but behold the humanity!
+
+<p class="text-align-center asterism">⁂</p>
+
+I'm not, I'm not, I'm not, them,<br>
+who hold regressive dynamics,<br>
+toward the deterministic chaos,<br>
+-- for all that degenerate fall to the same<br>
+bland state.<br>
+
+But I am born with the noble blood,<br>
+and the deeds support thus.<br>
