--- a/_ishalvingover/25-11-29-4.md
+++ b/_ishalvingover/25-11-29-4.md
@@ -1,7 +1,7 @@
 ---
 title: Ishalvingover -4-
 
-firstverse: "DRAFT; WIP"
+firstverse: "I'm not, I'm not, I'm not, them,"
 
 ---
 
@@ -22,7 +22,7 @@ I didn't mind.
 And that explains.
 
 - So the particle, what was it?
-- Better question would be 'where did it head?' -- while we never know it...
+- Better question would be 'where did it head?' -- while we'll never know it...
 - What do they see? What do they feel,<br> 
 traversing the artificial space<br>
 filled with cold masses stuck<br>
@@ -39,7 +39,7 @@ What saw we on that cave:<br>
 Flesh clean. Rather pleasant.<br>
 They likely left it as is.<br>
 
-Ah, but behold the humanity!
+Ah, --- ----- --- --------!
 
 <p class="text-align-center asterism">⁂</p>
 
@@ -51,3 +51,5 @@ bland state.<br>
 
 But I am born with the noble blood,<br>
 and the deeds support thus.<br>
+
+<p class="text-align-center">* * *<br><i>25.12.13</i></p>
