251219 post from ferenia

--- a/_ishalvingover/25-12-14-5.md
+++ b/_ishalvingover/25-12-14-5.md
@@ -23,3 +23,9 @@ It was likely because I crossed the river.<br>
 I'm tired. So I took usual way to get back home.<br>
 
 I hate this world.<br>
+
+Well, I had my guitar fixed.
+
+They were on board to another planet. But I prefered this space without gravity. "There has to be a solution to suppress..." I thought eyeing the window, "they that imitate in bad faith the lines... without the ultimate inference..."
+Landed; again.
+Thence I walked along the trainway (or the wall covering it). It spread over the surface to manifest its grave concrete... yet even there the parasites.
