--- a/_ishalvingover/25-12-14-5.md
+++ b/_ishalvingover/25-12-14-5.md
@@ -29,3 +29,9 @@ Well, I had my guitar fixed.
 They were on board to another planet. But I prefered this space without gravity. "There has to be a solution to suppress..." I thought eyeing the window, "they that imitate in bad faith the lines... without the ultimate inference..."
 Landed; again.
 Thence I walked along the trainway (or the wall covering it). It spread over the surface to manifest its grave concrete... yet even there the parasites.
+
+Weh! Weh! Foul smell!
+So I left aside and looked up
+the blurry star...
+"You know... it's always more from above!"
+Blurred more.
