--- a/_ishalvingover/25-12-14-5.md
+++ b/_ishalvingover/25-12-14-5.md
@@ -35,3 +35,17 @@ So I left aside and looked up
 the blurry star...
 "You know... it's always more from above!"
 Blurred more.
+
+(Here is whence I see the path)
+
+*** *** **** * *** ***** *** **** ** *** ******* ** * ****** ****** *** ******** ***** ***** ** **** ******** ** * **** ** ********* *** ***** ****** ** ***** ***** ********* **** ***** ** *** ******** ******** ** *** ***** **** *********** ** * **** **** ** **** * *** ***** ****** ******** *** ******* *** *************** ******* *** ******** ** ***** ** * ********* **** *** ********** *** ********* ***** ** **** ********* **********
+
+Ah forget it; they are to be shown.
+
+But for now, I got to take a nap. -- I'll tell you what I saw there. -- Right now I'm a bit tired, ...
+
+First, and impression prima.
+
+[2D]
+
+&: that, even while my soul be designated initially with my body, it is floating.
