--- a/_ishalvingover/25-12-14-5.md
+++ b/_ishalvingover/25-12-14-5.md
@@ -49,3 +49,9 @@ First, and impression prima.
 [2D]
 
 &: that, even while my soul be designated initially with my body, it is floating.
+
+To talk about imitating automata. The problem is the high-dimensional-output, which had been holding expectations -- the culprit is, as always, the insentient peoples.
+
+To talk about the sibling again. [later]
+
+To talk about that impressio prima again: For now the drawn is not in my hands. It was contained, w/ sizable margins. Such *high-dimension* impressions accompany with text. Next: on divinity.
