iho5 update on div

--- a/_ishalvingover/25-12-14-5.md
+++ b/_ishalvingover/25-12-14-5.md
@@ -55,3 +55,7 @@ To talk about imitating automata. The problem is the high-dimensional-output, wh
 To talk about the sibling again. [later]
 
 To talk about that impressio prima again: For now the drawn is not in my hands. It was contained, w/ sizable margins. Such *high-dimension* impressions accompany with text. Next: on divinity.
+
+![/imgs_ishalvingover/260109_iho_on_div.png](/imgs_ishalvingover/260109_iho_on_div.png)
+
+Now to add,
