--- a/_ishalvingover/25-12-14-5.md
+++ b/_ishalvingover/25-12-14-5.md
@@ -58,4 +58,31 @@ To talk about that impressio prima again: For now the drawn is not in my hands. 
 
 ![/imgs_ishalvingover/260109_iho_on_div.png](/imgs_ishalvingover/260109_iho_on_div.png)
 
-Now to add,
+Now to add, ...
+
+The color of the firmament was changed, but will not differ anymore.
+
+...
+
+Below: an indeterminable shallowness,<br>
+and amid earth tepid, I found my body.<br>
+Against the gravity and toward the weak light<br>
+crawled I. With the difference diminishing<br>
+I thought of the Designation of my soul.<br>
+Muddy, alone, ... yet with an end.<br>
+I layed my body on this closed room<br>
+and thought of the girl, one of ...<br>
+four and one. It was the midst of my life<br>
+when I met her, and wanted to ignore her<br>
+praesence in my life. She asked me why.<br>
+I couldn't answer her.<br>
+<br>
+" Might be the influence of the bad actors;<br>
+" but I learned, see you, to neglect false<br>
+" stories. For, as shown, they were not in<br>
+" the heart. Now take my hand, & you'll never<br>
+" leave me.<br>
+<br>
+Morning, we had to get through a tunnel<br>
+where outdated machines grumbled without<br>
+any purpose. <br>
