iho5 update machines grumble

--- a/_ishalvingover/25-12-14-5.md
+++ b/_ishalvingover/25-12-14-5.md
@@ -77,12 +77,16 @@ when I met her, and wanted to ignore her<br>
 praesence in my life. She asked me why.<br>
 I couldn't answer her.<br>
 <br>
-" Might be the influence of the bad actors;<br>
+"Might be the influence of the bad actors;<br>
 " but I learned, see you, to neglect false<br>
 " stories. For, as shown, they were not in<br>
 " the heart. Now take my hand, & you'll never<br>
-" leave me.<br>
+" leave me."<br>
 <br>
+
+![/imgs_ishalvingover/260116_iho_machines_grumble.png](/imgs_ishalvingover/260116_iho_machines_grumble.png)
+
 Morning, we had to get through a tunnel<br>
 where outdated machines grumbled without<br>
-any purpose. <br>
+any purpose. "Abandoned and without light<br>
+" are they -- all dead..."
