--- a/_ishalvingover/25-12-14-5.md
+++ b/_ishalvingover/25-12-14-5.md
@@ -89,4 +89,20 @@ I couldn't answer her.<br>
 Morning, we had to get through a tunnel<br>
 where outdated machines grumbled without<br>
 any purpose. "Abandoned and without light<br>
-" are they -- all dead..."
+" are they -- all dead..." But that they reside<br>
+on a *vertical* tunnel, doesn't it put?<br>
+I saw a ray of light glimmer from the top.<br>
+<br>
+Slippery walls... but the has taken us up<br>
+to the room. In which, numerous rodents.<br>
+In one path I met one of the siblings.<br>
+What are you doing here? In this closed room...<br>
+Then we walked out. We missed its warmth.<br>
+<br>
+Outside the tunnel: how sad, poor, miserable<br>
+is this place. But I will not return even when lost.<br>
+It felt like being drowned in the air. So<br>
+for a little more amount of the breath<br>
+I climbed over the gray hill. Here I await<br>
+-- the end... but without me.<br>
+<br>
