--- a/_ishalvingover/25-12-14-5.md
+++ b/_ishalvingover/25-12-14-5.md
@@ -106,3 +106,14 @@ for a little more amount of the breath<br>
 I climbed over the gray hill. Here I await<br>
 -- the end... but without me.<br>
 <br>
+I descended for the damnation of bugs particular.<br>
+Offsiding by a river, saw a weird town out of nowhere.<br>
+I could not figure out the purpose of this cluster.<br>
+'What do they do?' Mocking mass... Entered; in the center,<br>
+there was an absurd gigantic structure lying low and high<br>
+-- fearsome... then saw common philistine-prints nearby.<br>
+Only thence assured that it was real. But why here --<br>
+or, *only here*? for it were only that allowed?<br>
+Maybe an organic structure pre-existed before...<br>
+-- but it makes not less depressing, by the content.<br>
+<br>
