--- a/_ishalvingover/25-12-14-5.md
+++ b/_ishalvingover/25-12-14-5.md
@@ -117,3 +117,8 @@ or, *only here*? for it were only that allowed?<br>
 Maybe an organic structure pre-existed before...<br>
 -- but it makes not less depressing, by the content.<br>
 <br>
+
+- <span class="iho-name-span">The girl, one of.</span> No one takes things seriously, and nothing is worth taking seriously, and no one can be taken seriously, and...
+- <span class="iho-name-span">I self.</span> Including they that expect I self to take them seriously.
+- <span class="iho-name-span">The girl, one of.</span> Whatever be they like... Anyways where do we start again?
+- <span class="iho-name-span">I self.</span> Lower!
