post 260131 new schema to work on

--- a/_ishalvingover/25-12-14-5.md
+++ b/_ishalvingover/25-12-14-5.md
@@ -1,7 +1,7 @@
 ---
 title: Ishalvingover -5-
 
-firstverse: "DRAFT; WIP"
+firstverse: "Lower!"
 ---
 
 As exiting I saw something burning.<br>
@@ -119,6 +119,11 @@ Maybe an organic structure pre-existed before...<br>
 <br>
 
 - <span class="iho-name-span">The girl, one of.</span> No one takes things seriously, and nothing is worth taking seriously, and no one can be taken seriously, and...
-- <span class="iho-name-span">I self.</span> Including they that expect I self to take them seriously.
+- <span class="iho-name-span">I self.</span> Including they that expect *I self to take them seriously.
 - <span class="iho-name-span">The girl, one of.</span> Whatever be they like... Anyways where do we start again?
+
+<p class="text-align-center asterism">⁂</p>
+
 - <span class="iho-name-span">I self.</span> Lower!
+
+<p class="text-align-center">* * *<br><i>26.01.28</i></p>
